<resources>
    <!--home-->
    <string name="app_name">League of Legends Coaching</string>
    <string name="title">LEAGUE OF LEGENDS \nCOACHING</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>

    <!--signup-->
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="inGame">In Game Name</string>
    <string name="checkCoach">I am a Coach</string>

    <!--coachRegistration-->
    <string name="coachRegistration">COACH REGISTRATION</string>
    <string name="elo">Elo</string>
    <string name="language">Language</string>
    <string name="roles">Roles</string>
    <string name="cost">Cost/hr</string>
    <string name="schedule">Schedule</string>
    <string name="coach_signup">SIGN UP AS COACH</string>

    <!--searchCoach-->
    <string name="role">Role</string>
    <string name="champions">Champions</string>
    <string name="maxCost">Max Cost</string>
    <string name="title_activity_search_coach">SearchCoach</string>

    <!--coachesList-->
    <string name="coachesList">COACHES LIST</string>
    <string name="details">Details</string>

    <!--studentArea-->
    <string name="studentArea">STUDENT AREA</string>
    <string name="findCoach">FIND COACH</string>
    <string name="booking">BOOKING</string>
    <string name="favoriteCoaches">FAVORITE COACHES</string>
    <string name="logout">LOGOUT</string>

    <!--schedule-->
    <string name="registerSchedule">REGISTER SCHEDULE</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="change_schedule">Change Schedule</string>

    <!--daySchedule-->
    <string name="gmt">All the hours are GMT+1</string>
    <string name="zero_to_one">00 - 01</string>
    <string name="one_to_two">01 - 02</string>
    <string name="two_to_three">02 - 03</string>
    <string name="three_to_four">03 - 04</string>
    <string name="four_to_five">04 - 05</string>
    <string name="five_to_six">05 - 06</string>
    <string name="six_to_seven">06 - 07</string>
    <string name="seven_to_eight">07 - 08</string>
    <string name="eight_to_nine">08 - 09</string>
    <string name="nine_to_ten">09 - 10</string>
    <string name="ten_to_eleven">10 - 11</string>
    <string name="eleven_to_twelve">11 - 12</string>
    <string name="twelve_to_thirteen">12 - 13</string>
    <string name="thirteen_to_fourteen">13 - 14</string>
    <string name="fourteen_to_fifteen">14 - 15</string>
    <string name="fifteen_to_sixteen">15 - 16</string>
    <string name="sixteen_to_seventeen">16 - 17</string>
    <string name="seventeen_to_eighteen">17 - 18</string>
    <string name="eighteen_to_nineteen">18 - 19</string>
    <string name="nineteen_to_twenty">19 - 20</string>
    <string name="twenty_to_twentyone">20 - 21</string>
    <string name="twentyone_to_twentytwo">21 - 22</string>
    <string name="twentytwo_to_twentythree">22 - 23</string>
    <string name="twentythree_to_twentyfour">23 - 24</string>

    <string name="save_day">SAVE</string>


    <!--coachArea-->
    <string name="coachArea">COACH AREA</string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="modify">MODIFY PERSONAL INFO</string>

    <!--coachDetails-->
    <string name="coachDetails">COACH DETAILS</string>
    <string name="championsDetails">CHAMPIONS DETAILS</string>
    <string name="opgg">OP.GG</string>
    <string name="book">BOOK</string>
    <string name="n_games">N Games</string>

    <!--coachReservation-->
    <string name="coachReservation">COACH RESERVATION</string>
    <string name="bookingCalendar">BOOKING CALENDAR</string>
    <string name="expectedCost">Expected Cost</string>

    <!--reservationList-->
    <string name="reservationList">RESERVATION FOR THE DAY : \n</string>
    <string name="back"> BACK </string>
    <string name="notAvailable">Coach Not Available Today</string>

    <!--reservation-->
    <string name="delete">DELETE</string>

    <!--upgrade-->
    <string name="upgrade">UPGRADE TO COACH</string>
    <string name="updateInfo">UPDATE INFORMATIONS</string>
    <string name ="modifyInformations">MODIFY INFORMATIONS</string>

    <!--eloSpinner-->
    <string-array name="elo_list">
        <item>Bronze</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Platinum</item>
        <item>Diamond</item>
        <item>Master</item>
        <item>Challenger</item>
    </string-array>

    <!--roleSpinner-->
    <string-array name="role1_list">
        <item>Top</item>
        <item>Jungle</item>
        <item>Mid</item>
        <item>Adc</item>
        <item>Support</item>
    </string-array>

    <string-array name="role2_list">
        <item>None</item>
        <item>Top</item>
        <item>Jungle</item>
        <item>Mid</item>
        <item>Adc</item>
        <item>Support</item>
    </string-array>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
