<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.ReservationList">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reservationList_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservationList"
                android:textSize="@dimen/label"
                android:textAlignment="center"
                style="@style/TitleStyle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/label"
                    android:text="@string/gmt"
                    style="@style/LabelStyle"/>

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/reservationList_title"
                android:choiceMode="singleChoice">
            </ListView>

            <TextView
                android:id="@+id/no_reservations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/notAvailable"
                android:visibility="invisible"
                android:layout_margin="@dimen/margin"
                style="@style/LabelStyle"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_exit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:textSize="@dimen/label"
                    android:background="@drawable/custom_button"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/book"
                    android:textSize="@dimen/label"
                    android:background="@drawable/custom_button"
                    android:layout_marginRight="@dimen/margin"
                    style="@style/ButtonStyle"/>

            </LinearLayout>
        </LinearLayout>




    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
