<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.CoachArea">

    <RelativeLayout
        android:id="@+id/relative_coachArea"
        android:layout_width="368dp"
        android:layout_height="503dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/coachArea_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/coachArea"
            android:textAlignment="center"
            android:textSize="@dimen/title_text" />

        <Button
            android:id="@+id/apppointments_button"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/appointments"
            android:textSize="@dimen/button_text"
            android:layout_above="@+id/modify_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp" />

        <Button
            android:id="@+id/modify_button"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/modify"
            android:textSize="@dimen/button_text"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/apppointments_button"
            android:layout_alignStart="@+id/apppointments_button"
            android:layout_marginBottom="162dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
