<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cesare.leagueoflegendscoaching.SignUp">

    <RelativeLayout
        android:id="@+id/relative_signup"
        android:layout_width="368dp"
        android:layout_height="503dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="@dimen/title_text"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="38dp" />

        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/signup_title"
            android:layout_marginTop="31dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:text="@string/name"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:padding="@dimen/padding" />

            <TextView
                android:id="@+id/inGame_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"

                android:text="@string/inGame"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/inGame_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"

                android:text="@string/password"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/repeatPassword_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"

                android:text="@string/repeatPassword"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/repeatPassword_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/coach_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/checkCoach"
                android:textSize="@dimen/label" />


        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_below="@id/linear_login"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/sign_up"
            android:textSize="@dimen/button_text" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
