<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.CoachDetails">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="503dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:id="@+id/relative_coachDetails">

        <TextView
            android:id="@+id/coach_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/coachDetails"
            android:layout_marginBottom="@dimen/margin"
            style="@style/TitleStyle" />

        <ViewStub
            android:id="@+id/stub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inflatedId="@+id/coachDetailsLayout"
            android:layout="@layout/single_coach_frame"
            android:layout_below="@+id/coach_details"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/listLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coachDetailsLayout"
            android:layout_marginBottom="@dimen/margin">

        <TextView
            android:id="@+id/champion_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/championsDetails"
            android:layout_below="@+id/coachDetailsLayout"
            android:layout_marginBottom="@dimen/margin"
            style="@style/LabelStyle" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/champion_details">
        </ListView>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listLayout"
            android:weightSum="2">

                <Button
                    android:id="@+id/opggButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opgg"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    style="@style/ButtonStyle"/>

                <Button
                    android:id="@+id/bookButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/book"
                    android:textAlignment="center"
                    android:textSize="@dimen/label"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    style="@style/ButtonStyle"/>

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
