<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Home"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="503dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:text="@string/title"
            style="@style/TitleStyle"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/login"
            android:layout_marginTop="90dp"
            android:layout_below="@+id/title_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button"
            style="@style/ButtonStyle"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:id="@+id/signup_button"
            android:text="@string/sign_up"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="119dp"
            android:layout_below="@+id/login_button"
            android:layout_alignLeft="@+id/login_button"
            android:layout_alignStart="@+id/login_button"
            android:layout_marginTop="74dp"
            android:background="@drawable/custom_button"
            style="@style/ButtonStyle"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
