<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.SignUp">

    <RelativeLayout
        android:id="@+id/relative_coachRegistration"
        android:layout_width="368dp"
        android:layout_height="503dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/coachRegistration_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:text="@string/coachRegistration"
            android:textAlignment="center"
            android:textSize="@dimen/title_text"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="38dp" />

        <LinearLayout
            android:id="@+id/linear_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/coachRegistration_title"
            android:layout_marginTop="31dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/elo_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/elo_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/padding"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text="@string/elo"
                    android:textSize="@dimen/label" />

                <Spinner
                    android:id="@+id/elo_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/language_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"

                android:text="@string/language"
                android:textSize="@dimen/label" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
                    android:id="@+id/flag_UnitedKingdom_ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/flag_button"

                    android:src="@mipmap/flag_unitedkingdom" />

                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
                    android:id="@+id/flag_Italy_ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/flag_button"

                    android:src="@mipmap/flag_italy" />

                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
                    android:id="@+id/flag_Germany_ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/flag_button"

                    android:src="@mipmap/flag_germany" />

                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
                    android:id="@+id/flag_France_ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/flag_button"
                    android:src="@mipmap/flag_france" />

                <com.example.cesare.leagueoflegendscoaching.ToggleImageButton
                    android:id="@+id/flag_Spain_ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/flag_button"

                    android:src="@mipmap/flag_spain" />
            </LinearLayout>

            <TextView
                android:id="@id/roles_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/roles"
                android:textSize="@dimen/label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/role1_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/role2_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cost_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:padding="@dimen/padding"
                    android:text="@string/cost"
                    android:textSize="@dimen/label" />

                <EditText
                    android:id="@+id/cost_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/schedule_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"

                android:text="@string/schedule"
                android:textSize="@dimen/label"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/schedule_ImageButton"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"

                    android:background="@android:color/background_light"
                    android:src="@mipmap/ic_date_range_black_48dp"/>
            </RelativeLayout>


        </LinearLayout>
        <Button
            android:id="@+id/signupCoachSubmit_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_below="@id/linear_registration"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/coach_signup"
            android:textSize="@dimen/button_text" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>

